--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,13 @@ dependencies:
   get_it: 7.6.0
   injectable: 2.1.2
   auto_route: 7.4.0
-  flutter_bloc: 8.1.3
   freezed_annotation: 2.2.0
   json_serializable: 6.7.0
   json_annotation: 4.8.1
   equatable: 2.0.5
   infinite_scroll_pagination: 3.2.0
   flutter_flavor: 3.1.1
+  provider: 6.0.5
 
 
 
